# kaon

./: .clang-format  .gitmodules  .qmlformat.ini  CMakeLists.txt  README.md  dev.lorendb.kaon.desktop  format.sh
.github/workflows/: linux.yml
src/: AppVersion.h.in  Aptabase.cpp  Aptabase.h  CMakeLists.txt  Dotnet.cpp  Dotnet.h  DotnetDownloadDialog.qml  DownloadManager.cpp  DownloadManager.h  Game.cpp  Game.h  GameDetails.qml  GameExecutablePickerModel.cpp  GameExecutablePickerModel.h  GamesFilterModel.cpp  GamesFilterModel.h  LoadingPage.qml  Main.qml  Mods.cpp  Mods.h  SettingsPage.qml  Steam.cpp  Steam.h  SteamGrid.qml  SteamGridDelegate.qml  SteamListDelegate.qml  UEVR.cpp  UEVR.h  UpdateChecker.cpp  UpdateChecker.h  VDF.cpp  VDF.h  Wine.cpp  Wine.h  main.cpp  pch.h  vdf.cpp  vdf.h
src/components/: Tag.qml
src/icons/: README.md
src/mods/: BepInExConfigManager.cpp  BepInExConfigManager.h  Bepinex.cpp  Bepinex.h  Dotnet.cpp  Dotnet.h  GitHubMod.cpp  GitHubMod.h  Mod.cpp  Mod.h  ModsFilterModel.cpp  ModsFilterModel.h  Portal2VR.cpp  Portal2VR.h  UEVR.cpp  UEVR.h  UUVR.cpp  UUVR.h
src/qml/: AddCustomGame.qml  Dialogs.qml  DotnetDownloadDialog.qml  GameDetails.qml  GamesView.qml  Main.qml  ModsList.qml  SettingsPage.qml  SteamView.qml
src/qml/components/: GameGridDelegate.qml  GameListDelegate.qml  SteamGridDelegate.qml  SteamListDelegate.qml  Tag.qml
src/stores/: CustomGames.cpp  CustomGames.h  Heroic.cpp  Heroic.h  Itch.cpp  Itch.h  Steam.cpp  Steam.h  Store.cpp  Store.h
